meta tags y redirect

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo-vertical.svg" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
@@ -10,7 +10,22 @@
       crossorigin=""
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AlertAseo Web</title>
+    <title>AlertAseo</title>
+    <meta
+      name="author"
+      content="Vicente Reyes - Marco Vivar - Marcelo Estay - Juan Larenas"
+    />
+    <meta
+      name="description"
+      content="AlertAseo es una aplicación móvil con el objetivo de anunciar recorridos de camiones de basura e informar de microbasurales..."
+    />
+    <meta property="og:title" content="AlertAseo" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://alertaseo.netlify.app/" />
+    <meta
+      property="og:image"
+      content="https://media.discordapp.net/attachments/739778011850604605/1042955818712182834/Logo_AlertAseo.png?width=570&height=473"
+    />
   </head>
   <body>
     <div id="root"></div>
